work on roadmap page, color schems, and about us

--- a/themes/bigspring/layouts/_default/how-it-works.html
+++ b/themes/bigspring/layouts/_default/how-it-works.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 {{with .Params.banner}}
-<section class="section bg-light">
+<section class="section bg-white">
   <div class="container">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6 col-md-10 mb-6 mb-lg-0">
@@ -95,9 +95,8 @@
           {{ with .image }}
           {{ if fileExists (add `assets/` .) }}
           {{$img:= resources.Get . }}
-          {{$img:= $img.Resize "875x"}}
-          {{$imgWebp:= $img.Resize "875x webp"}}
-          <div class="swiper-slide"><img loading="lazy" decoding="async" class="img-fluid rounded-2 shadow" width="{{$img.Width}}" height="{{$img.Height}}" src="{{$imgWebp.RelPermalink}}" alt="image" onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'"></div>
+          {{$imgWebp:= $img}}
+          <div class="swiper-slide"><img loading="lazy" decoding="async"  width="500" height="200" src="{{$imgWebp.RelPermalink}}" alt="image" onerror="this.onerror=null;this.src='{{$img.RelPermalink}}'"></div>
           {{ end }}
           {{ end }}
         </div>
@@ -109,5 +108,28 @@
 {{ end }}
 {{ end }}
 <!-- /how-it-works -->
+
+{{with .Params.cta}}
+{{if .enable}}
+<section class="section {{with .background_class}}{{.}} {{end}}">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-7 mb-4 text-center mx-auto">
+        <h2 class="section-title h3">{{ .title | markdownify }}</h2>
+        <div class="content mb-5">
+          {{.content | markdownify}}
+        </div>
+
+        {{with .button}}
+        {{if .enable}}
+        <a class="btn btn-outline-primary" href="{{.link | relLangURL}}">{{.label}}</a>
+        {{end}}
+        {{end}}
+      </div>
+    </div>
+  </div>
+</section>
+{{end}}
+{{end}}
 
 {{ end }}
